--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="justify-content-center">
-  <h2>Agrega un nuevo restaurante</h2>
+  <h2>Edit your Restaurant</h2>
   <div class="bg-white text-dark">
     <%= simple_form_for @restaurant do |f| %>
     <%= f.input :name, label: "Restaurant name"%>
