--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,7 @@
 <h1> Write a review en <%= @restaurant.name%> </h1>
 
 <%= simple_form_for [ @restaurant, @review ] do |f| %>
-  <%= f.input :content %>
+  <%= f.input :content , label: "Your review"%>
+  <%= f.input :rating, label: "Rating between 1 to 5", collection: 1..5%>
   <%= f.submit "Submit review", class: "btn btn-primary" %>
 <% end %>
